<resources>
    <string name="app_name">Strongify</string>
    <string name="admob_id">ca-app-pub-5540972317318265~1300533254</string>
    <string name="admob_banner_id">ca-app-pub-5540972317318265/5758174081</string>
    <string name="rest">Rest</string>
    <string name="incorrect_value">Incorrect value</string>
    <string name="stop">Stop</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ignore">Ignore</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="purchase">Purchase</string>
    <string name="save">Save</string>
    <string name="time">"%d:%02d"</string>
    <string name="premium_feature">This is a premium feature. Please unlock Strongify to use it.</string>
    <string name="content_custom_exercise_update">Update superset or circuit</string>
    <string name="content_custom_exercise_add">Add exercise to circuit or superset</string>
    <string name="content_close_timer">Close timer</string>
    <string name="nav_workout">Workouts</string>
    <string name="nav_exercise">Exercises</string>
    <string name="nav_history">History</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="workouts">Workouts</string>
    <string name="workout_list_periodicity">%1$d minutes</string>
    <plurals name="workout_list_periodicity_plural">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <string name="workout_list_remove_title">Workout removed</string>
    <string name="workout_list_remove_action">Undo</string>
    <string name="workout_superset">Superset</string>
    <string name="workout_circuit">Circuit</string>
    <string-array name="periodicity">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="content_exercise_count">Exercise count</string>
    <string name="content_workout_duration">Workout duration</string>
    <string name="content_draggable">Draggable zone</string>
    <string name="content_play_workout">Play workout</string>
    <string name="content_set_count">Set count</string>
    <string name="content_exercise_weight">Exercise weight</string>
    <string name="content_rest">Exercise rest</string>
    <string name="content_filter">Filter by equipment</string>
    <string name="content_exercise_explanation">Exercise explanation</string>
    <string name="content_exercise_icon">Exercise icon</string>
    <string name="content_exercise_update_equipment">Equipment Update</string>
    <string name="content_validation">Validation</string>
    <string name="exercise_icon">Icon of the exercise</string>
    <string name="exercise_update_equipment">Update equipment</string>
    <string name="content_update">Update workout</string>
    <string name="content_menu">Menu</string>
    <string name="content_history_total_time_icon">Last workout duration</string>
    <string name="content_distance_icon">Distance</string>
    <string name="content_note">Workout note</string>
    <string name="content_skip_execution">Skip execution</string>
    <string name="content_equipment_icon">Equipment icon</string>
    <string name="content_time">Rest time</string>
    <string name="workout_creation_title">Workout title</string>
    <string name="workout_creation_title_error">Workout title is required</string>
    <string name="workout_creation_title_text">New workout</string>
    <string name="workout_creation_periodicity">Frequency</string>
    <string name="workout_creation_reminder">Reminder</string>
    <string name="workout_creation_reminder_check">Remind me to do this workout.</string>
    <string name="workout_creation_reminder_time"><![CDATA[
    Reminder on <b> %s </b> at <b> %02dh%02d </b>
    ]]></string>
    <string name="workout_creation_reminder_notif">Reminder for your workout: %s.</string>
    <string name="workout_creation_reminder_error">Please select a periodicity for your reminder.</string>
    <string name="workout_creation_action">CREATE</string>
    <string name="workout_update_action">UPDATE</string>
    <string name="workout_no_data">No workout yet.</string>
    <string name="exercise_no_data">No exercise yet.</string>
    <string name="exercise_set_no_data">No exercise set yet.</string>
    <string name="trans_workout_title">workoutTitle_%1$d</string>
    <string name="trans_workout_periodicity">workoutDesc_%1$d</string>
    <string name="transition">transition_%1$d</string>
    <string name="exercise_list_remove_title">Exercise removed</string>
    <plurals name="workout_exercise_set_count">
        <item quantity="one">%1$d set</item>
        <item quantity="other">%1$d sets</item>
    </plurals>
    <string name="exercise_set_type">Type: </string>
    <string name="workout_rest">%1$d\"%2$02d</string>
    <string name="workout_add_exercise">Add exercise</string>
    <string name="workout_add_superset">Add superset</string>
    <string name="workout_add_circuit">Add circuit</string>
    <string name="workout_add_exercise_action">Add</string>
    <string name="exercise_search_hint">Search exercise</string>
    <string name="filter_action">Filter</string>
    <string name="filter_title">Filter by equipment</string>
    <string name="exercise_set_remove_title">Execution removed</string>
    <string name="exercise_set_set_count">Number of sets</string>
    <string name="error_set_count">Invalid set count</string>
    <string name="error_weight">Invalid weight</string>
    <string name="exercise_set_title">Set %1$d</string>
    <string name="exercise_set_repetition">Goal: </string>
    <string name="exercise_set_rest">Rest: </string>
    <string name="exercise_set_turn">Turn : </string>
    <string name="exercise_set_weight">Weight: </string>
    <string name="exercise_max">MAX</string>
    <string name="exercise_set_rest_title">Rest period</string>
    <string name="exercise_set_goal_title">Goal</string>
    <string name="exercise_min_title">min</string>
    <string name="exercise_sec_title">sec</string>
    <string name="validate">Validate</string>
    <string name="set_superset_title">Settings of the superset</string>
    <string name="set_circuit_title">Settings of the circuit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_display">Display</string>
    <string name="preference_set_repetition_title">Exercise set repetitions</string>
    <string name="preference_set_weight_title">Exercise set weight</string>
    <string name="preference_set_repetition_desc">Number of default set repetition when adding a set to an exercise: %1$s</string>
    <string name="preference_set_weight_desc">Default set mass when adding an exercise to a workout: %1$s</string>
    <string name="default_set_count">10</string>
    <string name="default_weight">10</string>
    <string name="default_tick_count">5</string>
    <string name="preference_workout_execution">Workout</string>
    <string name="preference_ringer_activation">Activate ringer</string>
    <string name="preference_ringer_tick_count">Timer repetition</string>
    <string name="preference_ringer_tick_count_desc">Repeat %1$s seconds before the end of the timer</string>
    <string name="preference_timer_head">Chronometer overlay</string>
    <string name="exercise_weight_unit">Mass unit</string>
    <string name="exercise_distance_unit">Distance unit</string>
    <string name="size_unit">Size unit</string>
    <string name="default_weight_unit">LB</string>
    <string name="default_distance_unit">MI</string>
    <string name="default_size_unit">INCHES</string>
    <string name="preference_group_unit">Unit</string>
    <string name="preference_exercise_group">Exercise</string>
    <string name="preference_save">Save</string>
    <string name="preference_save_desc">Save all your workouts, histories and exercises into Download folder.</string>
    <string name="preference_restore">Restore</string>
    <string name="preference_restore_desc">Restore all your workouts, histories and exercises from backup file.</string>
    <string name="preference_dark_theme">Use dark theme</string>
    <string name="preference_about">About</string>
    <string name="about"><![CDATA[<b>Version %s</b><br>Strongify<br>Contact address: jessy.barthelemy08@gmail.com<br><br>
<b>Illustrations</b><br>Exercises from Everkinetic database with Creative Commons license.<br><br>

<b>Notifications sound :</b><br>
Emotion sounds Ringing bell - happy.wav by domrodrig of Freesound.org<br><br>
Bell, Counter, A.wav by InspectorJ (www.jshaw.co.uk) of Freesound.org<br><br>
Bicycle_bell_01.wav.wav by magedu of Freesound.org<br><br>
    ]]></string>
    <string name="preference_facebook">Follow us</string>
    <string name="preference_facebook_link">https://www.facebook.com/StrongifyApp/</string>
    <string name="preference_store">Rate us</string>
    <string name="group_chest">Chest</string>
    <string name="group_arm">Arm</string>
    <string name="group_shoulder">Shoulder</string>
    <string name="group_abs">Abs</string>
    <string name="group_leg">Leg</string>
    <string name="group_back">Back</string>
    <string name="group_cardio">Cardio</string>
    <string name="ex_ab_wheel">Ab rollout on knees</string>
    <string name="ex_hip_abduction">Hip abduction</string>
    <string name="ex_bench_to_skull">Decline close grip bench to skull</string>
    <string name="ex_decline_triceps_extension">Decline ez bar triceps extension</string>
    <string name="ex_ankle_circles">Ankle circles</string>
    <string name="ex_iron_cross_dumbbells">Iron cross with dumbbells</string>
    <string name="ex_cross_over">Cross over with bands</string>
    <string name="ex_cross_body_crunch">Cross body crunches</string>
    <string name="ex_crunch_stability">Crunches with stability ball</string>
    <string name="ex_decline_crunch">Decline crunch</string>
    <string name="ex_decline_ob_crunch">Decline oblique crunch</string>
    <string name="ex_curl_machine">Biceps curl with machine</string>
    <string name="ex_cable_curl">High cable curls</string>
    <string name="ex_al_curl_dumb">Alternating biceps curl with dumbbell</string>
    <string name="ex_al_hammer_curl_dumb">Alternating hammer curl with dumbbell</string>
    <string name="ex_spider_curl_bar">Spider curl with barbell</string>
    <string name="ex_ez_bar_curl">EZ bar curl</string>
    <string name="ex_wide_grip_curl_bar">Wide grip biceps curl with barbell</string>
    <string name="ex_concentration_curl_stab">Concentration curl on stability ball</string>
    <string name="ex_al_inc_curl_dumb">Alternating incline curl with dumbbell</string>
    <string name="change_exercise_title">Set next exercise</string>
    <string name="change_exercise_unavailable">You cannot change exercise during superset or circuit.</string>
    <string name="change_no_exercise">No remaining exercises.</string>
    <string name="add_set">Add set</string>
    <string name="first_name">First name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="weight_mass">Mass</string>
    <string name="weight_fat">Fat</string>
    <string name="weight_bones">Bones</string>
    <string name="weight_muscle">Muscles</string>
    <string name="date">Date</string>
    <string name="weight_update_warning">Please note that a measure already exists for this date, she will be overwritten.</string>
    <string name="name"> Name </string>
    <string name="min"> Min </string>
    <string name="max"> Max </string>
    <string name="average"> Avg </string>
    <string name="sum"> Sum </string>
</resources>