<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory android:title="@string/preference_display">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="dark_theme"
            android:title="@string/preference_dark_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_group_unit">
        <ListPreference
            android:key="weight_unit"
            android:title="@string/exercise_weight_unit"
            android:entries="@array/weight_unit"
            android:entryValues="@array/weight_unit"
            android:summary="%s"
            android:defaultValue="@string/default_weight_unit"/>

        <ListPreference
            android:key="distance_unit"
            android:title="@string/exercise_distance_unit"
            android:entries="@array/distance_unit"
            android:entryValues="@array/distance_unit"
            android:summary="%s"
            android:defaultValue="@string/default_distance_unit"/>

        <ListPreference
            android:key="size_unit"
            android:title="@string/size_unit"
            android:entries="@array/size_unit"
            android:entryValues="@array/size_unit"
            android:summary="%s"
            android:defaultValue="@string/default_size_unit"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_exercise_group">
        <EditTextPreference
            android:defaultValue="@string/default_set_count"
            android:key="default_rep"
            android:title="@string/preference_set_repetition_title"
            android:inputType="number"/>
        <EditTextPreference
            android:defaultValue="@string/default_weight"
            android:key="default_weight"
            android:title="@string/preference_set_weight_title"
            android:inputType="number"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_workout_execution">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ringer_activation"
            android:title="@string/preference_ringer_activation" />

        <EditTextPreference
            android:defaultValue="@string/default_tick_count"
            android:key="sound_tick_count"
            android:title="@string/preference_ringer_tick_count"
            android:inputType="numberDecimal"
            android:summary="@string/preference_ringer_tick_count_desc"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="timer_head"
            android:title="@string/preference_timer_head" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_save">
        <Preference android:title="@string/preference_save"
            android:key="save"
            android:summary="@string/preference_save_desc"/>
        <Preference android:title="@string/preference_restore"
            android:key="restore"
            android:summary="@string/preference_restore_desc"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_about">
        <Preference
            android:title="@string/preference_about"
            android:key="about"/>

        <!--<Preference
            android:title="@string/remove_ads"
            android:key="remove_ads"
            />-->

        <Preference
            android:key="facebook"
            android:title="@string/preference_facebook"
            android:icon="@drawable/ic_facebook"/>
        <Preference
            android:key="store"
            android:title="@string/preference_store"
            android:icon="@drawable/ic_store"/>
    </PreferenceCategory>
</PreferenceScreen>
