<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_workout"
        android:title="@string/nav_workout"
        android:icon="@drawable/ic_workout" />

    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_profile" />

    <item
        android:id="@+id/nav_exercise"
        android:title="@string/nav_exercise"
        android:icon="@drawable/ic_exercise" />

    <item
        android:id="@+id/nav_history"
        android:title="@string/nav_history"
        android:icon="@drawable/ic_history" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_settings" />
</menu>
