<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_horizontal_margin">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/add_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/add_set"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            style="@style/Button"
            android:paddingLeft="@dimen/big_margin"
            android:paddingRight="@dimen/big_margin"
            />

        <Button
            android:id="@+id/add_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/add_set"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/workout_add_exercise"
            style="@style/Button"
            android:paddingLeft="@dimen/big_margin"
            android:paddingRight="@dimen/big_margin"
            />

        <TextView
            android:id="@+id/change_exercise_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_exercise_title"
            app:layout_constraintTop_toBottomOf="@id/add_exercise"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/big_margin"
            android:textAlignment="center"
            style="@style/Title"/>

        <ListView
            android:id="@+id/change_exercise"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/little_margin"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHeight_min="150dp"
            app:layout_constraintTop_toBottomOf="@id/change_exercise_title"/>
        <TextView
            android:id="@+id/change_exercise_unavailable"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/little_margin"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/change_exercise_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ok"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/change_exercise_unavailable"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/change_no_exercise"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/little_margin"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/change_exercise_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ok"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/change_no_exercise"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="change_exercise_unavailable,change_exercise,change_no_exercise" />

        <Button
            android:id="@+id/ok"
            style="@style/TransparentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            android:gravity="bottom|end"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
