<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/little_margin"
        android:text="@string/nav_profile"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_title"
        android:layout_marginStart="@dimen/little_margin"
        android:layout_marginEnd="@dimen/little_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textShortMessage"
            android:drawableStart="@drawable/ic_profile_small"
            android:drawableLeft="@drawable/ic_profile_small"
            android:drawablePadding="@dimen/little_margin"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_name"
        android:layout_marginStart="@dimen/little_margin"
        android:layout_marginEnd="@dimen/little_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:drawableStart="@drawable/ic_age_small"
            android:drawableLeft="@drawable/ic_age_small"
            android:drawablePadding="@dimen/little_margin"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_age"
        android:layout_marginStart="@dimen/little_margin"
        android:layout_marginEnd="@dimen/little_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:drawableStart="@drawable/ic_size_small"
            android:drawableLeft="@drawable/ic_size_small"
            android:drawablePadding="@dimen/little_margin"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/profile_goal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_size"
        android:text="@string/exercise_set_goal_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/little_margin"/>

    <Spinner
        android:id="@+id/profile_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_goal_title"
        android:layout_marginStart="@dimen/little_margin"
        android:layout_marginEnd="@dimen/little_margin"
        android:layout_marginTop="@dimen/little_margin"
        android:layout_marginBottom="@dimen/little_margin"/>

    <Button
        android:id="@+id/profile_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_below="@id/profile_goal"
        android:text="@string/validate"
        android:layout_marginTop="@dimen/little_margin"/>
</RelativeLayout>